--- a/17-four-card-feature-section/styles/style.css
+++ b/17-four-card-feature-section/styles/style.css
@@ -16,3 +16,164 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    width: 100%;
+    min-height: 100vh;
+    padding: 30px 20px 0px;
+    background-color: var(--very-light-gray);
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    max-width: 1500px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 40px;
+}
+
+#introduce {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 0px;
+}
+
+#introduce h1 {
+    color: var(--very-dark-blue);
+    font-size: 1.9em;
+}
+
+#introduce p {
+    text-align: center;
+    color: var(--grayish-blue);
+    font-weight: 300;
+    margin-top: 10px;
+    width: 60%;
+}
+
+#introduce h1:nth-of-type(1) {
+    font-weight: 300;
+}
+
+#container-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.card-item {
+    background-color: white;
+    box-shadow: 1px 2px 10px 2px rgba(0, 0, 0, 0.1);
+    padding: 22px;
+    border-radius: 5px;
+    max-width: 330px;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+
+.card-item h3 {
+    color: var(--very-dark-blue);
+    font-weight: 600;
+    font-size: 1.2em;
+}
+
+.card-item p {
+    color: var(--grayish-blue);
+    font-weight: 400;
+    font-size: 0.85em;
+    margin-bottom: 40px;
+}
+
+.card-item img {
+    align-self: flex-end;
+    margin-top: auto;
+    width: 50px;
+}
+
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.card-item.number-1 {
+    border-top: 4px solid var(--cyan);
+}
+
+.card-item.number-2 {
+    border-top: 4px solid var(--red);
+}
+
+.card-item.number-3 {
+    border-top: 4px solid var(--orange);
+}
+
+.card-item.number-4 {
+    border-top: 4px solid var(--blue);
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: var(--very-dark-blue);
+    width: calc(100% + 40px);
+    padding: 5px;
+    color: var(--very-light-gray);
+    font-size: 0.95em;
+}
+
+footer a {
+    text-decoration: none;
+    color: var(--cyan);
+    position: relative;
+}
+
+footer a::before {
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: var(--cyan);
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transition: all 0.2s ease;
+  }
+  
+  footer a:hover::before {
+    width: 50%;
+    height: 1px;
+  }
+  
+  footer a::after {
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: var(--cyan);
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    transition: all 0.2s ease;
+  }
+  
+  footer a:hover::after {
+    width: 50%;
+    height: 1px;
+  }
