--- a/17-four-card-feature-section/styles/style.css
+++ b/17-four-card-feature-section/styles/style.css
@@ -25,7 +25,7 @@ body {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
