--- a/18-base-apparel-coming-soon/styles/style.css
+++ b/18-base-apparel-coming-soon/styles/style.css
@@ -20,5 +20,93 @@
 }
 
 body {
-    font-family: 'Josefin Sans';
+    font-family: 'Josefin Sans', Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+#content {
+    background-image: linear-gradient(130deg, --linear-red1, --linear-red2);
+    background: url(../images/bg-pattern-desktop.svg) no-repeat center center/cover;
+    padding: 50px 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+#logo {
+    margin-bottom: 100px;
+}
+
+#content h1 {
+    font-size: 5em;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    font-weight: 400;
+    color: var(--dark-grayish-red);
+}
+#content h1 span {
+    font-weight: 200;
+    color: var(--desaturated-red);
+}
+
+#content p {
+    color: var(--desaturated-red);
+    margin: 15px 0px 30px;
+    line-height: 25px;
+}
+
+form {
+    position: relative;
+}
+
+input {
+    width: 100%;
+    padding: 15px;
+    border-radius: 25px;
+    border: 1px solid var(--desaturated-red);
+}
+
+#submit-arrow {
+    background-color: var(--desaturated-red);
+    background-image: linear-gradient(130deg, var(--linear-red1), var(--linear-red2));
+    width: 80px;
+    height: 47px;
+    border-radius: 30px;
+    position: absolute;
+    right: 0px;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: -2px 2px 10px 2px rgba(99, 11, 11, 0.1);
+    transition: all .25s ease;
+}
+
+#submit-arrow:hover {
+    transform: scale(1.15);
+    background-color: var(--desaturated-red);
+    background-image: none;
+}
+
+input::placeholder {
+    color: var(--desaturated-red);
+    padding-left: 10px;
+    font-weight: 600;
+}
+
+#image {
+    background: url(../images/hero-desktop.jpg) top
+ center/cover;
+    width: 60%;
+    background-color: rgba(0, 0, 0, 0.1);
+    background-blend-mode: color;
 }
